--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
     </div>
   </section>
 
+    <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v10.0" nonce="W8FghaFr"></script>
+  <center>
+    <div class="fb-comments" data-href="https://beltsasarazpeitia.github.io/" data-width="1000" data-numposts="1"></div>
+</center>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
   <script src="main.js"></script>
   <script async defer src="https://apis.google.com/js/api.js" onload="this.onload=function(){};handleClientLoad()" onreadystatechange="if (this.readyState === 'complete') this.onload()">
