--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v10.0" nonce="W8FghaFr"></script>
   <center>
-    <div class="fb-comments" data-href="https://beltsasarazpeitia.github.io/" data-width="1000" data-numposts="1"></div>
+    <div class="fb-comments" data-href="https://pollinori.github.io/youtube-pollinori/" data-width="1000" data-numposts="1"></div>
 </center>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
